# pixelflora

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
assets/: inat_sample_credits.md
dev/montana_natives/: README.md  request.toml
pixelflora/: __init__.py  attribution.py  cli.py  config.py  dataset.py  download.py  filters.py  http.py  licenses.py  pipeline.py  publish.py  request.py  schema.py  splits.py
pixelflora/sources/: __init__.py  base.py  inaturalist.py
tests/: test_core.py
