[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelflora"
version = "0.1.0"
description = "Extract attributed natural botanical images from iNaturalist into private Hugging Face training datasets."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "pydantic>=2",
    "requests>=2.31",
    "pillow>=10",
    "pyarrow>=15",
]

[project.scripts]
pixelflora = "pixelflora.cli:main"

[tool.setuptools.packages.find]
include = ["pixelflora*"]
